Added a wrapper to the BossSorter so that the BAPI DLL is only called from the thread on which it was created. This was in an effort to figure out why BAPI was crashing when methods were called in a certain order. The theory had been that the DLL didn't like being called from various threads. It turns out that wasn't the issue: there is a bug in BAPI.

--- a/GamebryoBase/GamebryoBase.csproj
+++ b/GamebryoBase/GamebryoBase.csproj
@@ -53,7 +53,9 @@
     <Compile Include="ModManagement\GamebryoGameSpecificValueInstaller.cs" />
     <Compile Include="ModManagement\Scripting\BsaManager.cs" />
     <Compile Include="PluginManagement\Boss\BossSorter.cs" />
+    <Compile Include="PluginManagement\Boss\BossSorterCore.cs" />
     <Compile Include="PluginManagement\Boss\BossException.cs" />
+    <Compile Include="PluginManagement\Boss\IBossSorter.cs" />
     <Compile Include="PluginManagement\Boss\StringArrayManualMarshaler.cs" />
     <Compile Include="PluginManagement\Boss\StringMarshaler.cs" />
     <Compile Include="PluginManagement\GamebryoPluginOrderValidator.cs" />
