--- a/NexusClient/app.config
+++ b/NexusClient/app.config
@@ -22,7 +22,7 @@
 			</webHttpBinding>
 		</bindings>
 		<client>
-			
+
 			<endpoint address="http://theelderscrolls.axel.tesnexus.com/"
 					  binding="webHttpBinding"
 					  bindingConfiguration="NexusBinding"
@@ -53,6 +53,24 @@
 		<Nexus.Client.Properties.Settings>
 			<setting name="ModManagerUrl" serializeAs="String">
 				<value>http://www.tesnexus.com/content/modmanager/</value>
+			</setting>
+			<setting name="HelpLinks" serializeAs="Xml">
+				<value>
+					<KeyedSettingsOfString>
+						<item key="Beta Wiki">
+							<string>http://wiki.tesnexus.com/index.php/Category:NMM</string>
+						</item>
+						<item key="Beta Forums">
+							<string>http://forums.nexusmods.com/index.php?/forum/439-open-beta-feedback/</string>
+						</item>
+						<item key="Bug Report How To">
+							<string>http://forums.nexusmods.com/index.php?/topic/460590-reporting-bugs/</string>
+						</item>
+						<item key="Bug Tracker">
+							<string>http://forums.nexusmods.com/index.php?/tracker/project-3-mod-manager-open-beta/</string>
+						</item>
+					</KeyedSettingsOfString>
+				</value>
 			</setting>
 		</Nexus.Client.Properties.Settings>
 	</applicationSettings>
@@ -121,10 +139,10 @@
 				</value>
 			</setting>
 			<setting name="DockPanelLayouts" serializeAs="Xml">
-			<value>
-				<KeyedSettingsOfString />
-			</value>
-		</setting>
+				<value>
+					<KeyedSettingsOfString />
+				</value>
+			</setting>
 			<setting name="ColumnWidths" serializeAs="Xml">
 				<value>
 					<ColumnWidths />
