Renamed help item.

--- a/NexusClient/Properties/Settings.settings
+++ b/NexusClient/Properties/Settings.settings
@@ -17,7 +17,7 @@
 					&lt;item key="Bug Report How To"&gt;
 						&lt;string&gt;http://forums.nexusmods.com/index.php?/topic/460590-reporting-bugs/&lt;/string&gt;
 					&lt;/item&gt;
-					&lt;item key="Bug Tracker"&gt;
+					&lt;item key="Report a Bug"&gt;
 						&lt;string&gt;http://forums.nexusmods.com/index.php?/tracker/project-3-mod-manager-open-beta/&lt;/string&gt;
 					&lt;/item&gt;
 				&lt;/KeyedSettingsOfString&gt;
