--- a/NexusClient/app.config
+++ b/NexusClient/app.config
@@ -66,7 +66,7 @@
 						<item key="Bug Report How To">
 							<string>http://forums.nexusmods.com/index.php?/topic/460590-reporting-bugs/</string>
 						</item>
-						<item key="Bug Tracker">
+						<item key="Report a Bug">
 							<string>http://forums.nexusmods.com/index.php?/tracker/project-3-mod-manager-open-beta/</string>
 						</item>
 					</KeyedSettingsOfString>
