Factored out the enforcement of the existence of critical plugins from the game mode factory to the application initialization. This enforcement needs to been done for all games, so this makes more sense.

--- a/GamebryoBase/GamebryoBase.csproj
+++ b/GamebryoBase/GamebryoBase.csproj
@@ -45,6 +45,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="GamebryoGameModeDescriptorBase.cs" />
     <Compile Include="GamebryoGameModeFactory.cs" />
     <Compile Include="GamebryoSettingsFiles.cs" />
     <Compile Include="GamebryoGameModeBase.cs" />
