New repositories for Morrowind and Oblivion.

--- a/NexusClient/app.config
+++ b/NexusClient/app.config
@@ -29,6 +29,18 @@
 					  contract="Nexus.Client.ModRepositories.Nexus.INexusModRepositoryApi"
 					  name="TESNexusREST" >
 			</endpoint>
+      <endpoint address="http://oblivion.axel.tesnexus.com/"
+            binding="webHttpBinding"
+            bindingConfiguration="NexusBinding"
+            contract="Nexus.Client.ModRepositories.Nexus.INexusModRepositoryApi"
+            name="OBNexusREST" >
+      </endpoint>
+      <endpoint address="http://morrowind.axel.tesnexus.com/"
+            binding="webHttpBinding"
+            bindingConfiguration="NexusBinding"
+            contract="Nexus.Client.ModRepositories.Nexus.INexusModRepositoryApi"
+            name="MWNexusREST" >
+      </endpoint>
 			<endpoint address="http://newvegas.axel.tesnexus.com/"
 					  binding="webHttpBinding"
 					  bindingConfiguration="NexusBinding"
