--- a/NexusClient/app.config
+++ b/NexusClient/app.config
@@ -22,7 +22,12 @@
 			</webHttpBinding>
 		</bindings>
 		<client>
-
+			<endpoint address="http://gatekeeper.nexusmods.com/"
+					  binding="webHttpBinding"
+					  bindingConfiguration="NexusBinding"
+					  contract="Nexus.Client.ModRepositories.Nexus.INexusModRepositoryApi"
+					  name="GatekeeperNexusREST" >
+			</endpoint>
 			<endpoint address="http://theelderscrolls.axel.tesnexus.com/"
 					  binding="webHttpBinding"
 					  bindingConfiguration="NexusBinding"
