--- a/Morrowind.ModScript/Morrowind.ModScript.csproj
+++ b/Morrowind.ModScript/Morrowind.ModScript.csproj
@@ -32,36 +32,12 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="GamebryoBase, Version=1.1.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\GamebryoBase\bin\Debug\GamebryoBase.dll</HintPath>
-    </Reference>
-    <Reference Include="ModManager.Interface, Version=1.1.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\ModManager.Interface\bin\Debug\ModManager.Interface.dll</HintPath>
-    </Reference>
-    <Reference Include="ModScript, Version=1.1.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\ModScript\bin\Debug\ModScript.dll</HintPath>
-    </Reference>
-    <Reference Include="Morrowind, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\Morrowind\bin\Debug\Morrowind.dll</HintPath>
-    </Reference>
-    <Reference Include="NexusClient.Interface, Version=1.1.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\NexusClient.Interface\bin\Debug\NexusClient.Interface.dll</HintPath>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core">
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
     </Reference>
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
-    <Reference Include="Util, Version=1.1.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\Util\bin\Debug\Util.dll</HintPath>
-    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="MorrowindModScriptFunctionProxy.cs" />
@@ -69,6 +45,36 @@
     <Compile Include="MorrowindModScriptInterpreterContext.cs" />
     <Compile Include="MorrowindModScriptType.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Commanding\Commanding.csproj">
+      <Project>{1732BB96-1F74-4B99-82D6-4D1239C9D36A}</Project>
+      <Name>Commanding</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\GamebryoBase\GamebryoBase.csproj">
+      <Project>{0055FB79-3587-486E-A87E-70304A61D7A4}</Project>
+      <Name>GamebryoBase</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\ModManager.Interface\ModManager.Interface.csproj">
+      <Project>{33F65739-7CFB-4EC1-89EF-8B0B5440AB82}</Project>
+      <Name>ModManager.Interface</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\ModScript\ModScript.csproj">
+      <Project>{474F11D4-9510-4C7D-AE19-C668FC0EC961}</Project>
+      <Name>ModScript</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Morrowind\Morrowind.csproj">
+      <Project>{998641A2-9362-4A17-8BA9-E9B5D9FF4BCA}</Project>
+      <Name>Morrowind</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\NexusClient.Interface\NexusClient.Interface.csproj">
+      <Project>{D586E7D8-9C8E-48F0-B20C-31A52B37E9D3}</Project>
+      <Name>NexusClient.Interface</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Util\Util.csproj">
+      <Project>{44CAA655-38C2-4CA2-BA68-A8D5C44B169D}</Project>
+      <Name>Util</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\lib\AutoIncrementVersion.targets" />
