--- a/WorldOfTanks/WorldOfTanks.csproj
+++ b/WorldOfTanks/WorldOfTanks.csproj
@@ -1,9 +1,9 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="3.5" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProductVersion>9.0.21022</ProductVersion>
+    <ProductVersion>9.0.30729</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
     <ProjectGuid>{C0A5B4F7-9F74-43B3-A2E2-5E7D8D9B8284}</ProjectGuid>
     <OutputType>Library</OutputType>
@@ -44,7 +44,6 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="PluginManagement\WoTPluginFactory.cs" />
     <Compile Include="Tools\WoTToolLauncher.cs" />
     <Compile Include="WoTLauncher.cs" />
     <Compile Include="SetupForm.cs">
