--- a/WorldOfTanks.ModScript/WorldOfTanks.ModScript.csproj
+++ b/WorldOfTanks.ModScript/WorldOfTanks.ModScript.csproj
@@ -1,9 +1,9 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="3.5" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProductVersion>9.0.21022</ProductVersion>
+    <ProductVersion>9.0.30729</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
     <ProjectGuid>{ED12DF7F-1C38-4E06-9E8C-7BABDA6528D8}</ProjectGuid>
     <OutputType>Library</OutputType>
@@ -79,7 +79,7 @@
   <Target Name="AfterBuild">
   </Target>
   -->
-    <Target Name="AfterBuild">
+  <Target Name="AfterBuild">
     <ItemGroup>
       <FilesToCopy Include="$(TargetDir)$(TargetName)*.dll" />
     </ItemGroup>
