--- a/Skyrim/Skyrim.csproj
+++ b/Skyrim/Skyrim.csproj
@@ -86,6 +86,10 @@
       <Project>{D586E7D8-9C8E-48F0-B20C-31A52B37E9D3}</Project>
       <Name>NexusClient.Interface</Name>
     </ProjectReference>
+    <ProjectReference Include="..\UI\UI.csproj">
+      <Project>{5EDD4E37-B8F3-403D-A2E9-AFF31B21A236}</Project>
+      <Name>UI</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Util\Util.csproj">
       <Project>{44CAA655-38C2-4CA2-BA68-A8D5C44B169D}</Project>
       <Name>Util</Name>
