--- a/NexusClient/NexusClient.csproj
+++ b/NexusClient/NexusClient.csproj
@@ -391,6 +391,7 @@
       <DependentUpon>GeneralSettingsPage.cs</DependentUpon>
     </Compile>
     <Compile Include="UI\Controls\SelectedItemEventArgs.cs" />
+    <Compile Include="UI\NexusFontSetResolver.cs" />
     <Compile Include="Updating\ProgrammeUpdater.cs" />
     <Compile Include="Updating\UpdateManager.cs" />
     <Compile Include="Updating\UpdateTask.cs" />
