--- a/UI/UI.csproj
+++ b/UI/UI.csproj
@@ -138,6 +138,9 @@
     </Compile>
     <Compile Include="FontManager.cs" />
     <Compile Include="FontSet.cs" />
+    <Compile Include="FontSetGroup.cs" />
+    <Compile Include="FontSetInformation.cs" />
+    <Compile Include="IFontSetResolver.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
