Added a type editor to edit flag enum values. This facilitates the editing of font styles with the font provider. It allows selecting any combination of the styles.

--- a/UI/UI.csproj
+++ b/UI/UI.csproj
@@ -136,6 +136,7 @@
     <Compile Include="Controls\PromptDialog.Designer.cs">
       <DependentUpon>PromptDialog.cs</DependentUpon>
     </Compile>
+    <Compile Include="FlagEnumUITypeEditor.cs" />
     <Compile Include="FontManager.cs" />
     <Compile Include="FontSet.cs" />
     <Compile Include="FontSetGroup.cs" />
