--- a/GamebryoBase/GamebryoBase.csproj
+++ b/GamebryoBase/GamebryoBase.csproj
@@ -140,6 +140,9 @@
       <DependentUpon>GeneralSettingsPage.cs</DependentUpon>
       <SubType>Designer</SubType>
     </EmbeddedResource>
+    <EmbeddedResource Include="SetupForm.resx">
+      <DependentUpon>SetupForm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Tools\TESsnip\ScriptCompiler\ScriptFunctions.xml" />
   </ItemGroup>
   <ItemGroup>
