Changed server names to point to gatekeeper enabled servers.

--- a/NexusClient/app.config
+++ b/NexusClient/app.config
@@ -28,37 +28,37 @@
 					  contract="Nexus.Client.ModRepositories.Nexus.INexusModRepositoryApi"
 					  name="GatekeeperNexusREST" >
 			</endpoint>
-			<endpoint address="http://oblivion.axel.tesnexus.com/"
+			<endpoint address="http://oblivion.nexusmods.com/"
 				  binding="webHttpBinding"
 				  bindingConfiguration="NexusBinding"
 				  contract="Nexus.Client.ModRepositories.Nexus.INexusModRepositoryApi"
 				  name="OBNexusREST" >
 			</endpoint>
-			<endpoint address="http://morrowind.axel.tesnexus.com/"
+			<endpoint address="http://morrowind.nexusmods.com/"
 				  binding="webHttpBinding"
 				  bindingConfiguration="NexusBinding"
 				  contract="Nexus.Client.ModRepositories.Nexus.INexusModRepositoryApi"
 				  name="MWNexusREST" >
 			</endpoint>
-			<endpoint address="http://newvegas.axel.tesnexus.com/"
+			<endpoint address="http://newvegas.nexusmods.com/"
 					  binding="webHttpBinding"
 					  bindingConfiguration="NexusBinding"
 					  contract="Nexus.Client.ModRepositories.Nexus.INexusModRepositoryApi"
 					  name="FONVNexusREST" >
 			</endpoint>
-			<endpoint address="http://fallout3.axel.tesnexus.com/"
+			<endpoint address="http://fallout3.nexusmods.com/"
 					  binding="webHttpBinding"
 					  bindingConfiguration="NexusBinding"
 					  contract="Nexus.Client.ModRepositories.Nexus.INexusModRepositoryApi"
 					  name="FO3NexusREST" >
 			</endpoint>
-			<endpoint address="http://skyrim.axel.tesnexus.com/"
+			<endpoint address="http://skyrim.nexusmods.com/"
 					  binding="webHttpBinding"
 					  bindingConfiguration="NexusBinding"
 					  contract="Nexus.Client.ModRepositories.Nexus.INexusModRepositoryApi"
 					  name="SKYRIMNexusREST" >
 			</endpoint>
-			<endpoint address="http://wot.axel.tesnexus.com/"
+			<endpoint address="http://wot.nexusmods.com/"
 				  binding="webHttpBinding"
 				  bindingConfiguration="NexusBinding"
 				  contract="Nexus.Client.ModRepositories.Nexus.INexusModRepositoryApi"
