Support for Legend of Grimrock (new variable added to store the executable path,  since executable and mods install folders are different, and the steam install  doesn't set the windows registry).

--- a/NexusClient/Properties/Settings.settings
+++ b/NexusClient/Properties/Settings.settings
@@ -91,6 +91,11 @@
 				&lt;PerGameModeSettingsOfString /&gt;
 			</Value>
 		</Setting>
+    <Setting Name="ExecutablePaths" Type="Nexus.Client.Settings.PerGameModeSettings`1[System.String]" Scope="User">
+      <Value Profile="(Default)">
+        &lt;PerGameModeSettingsOfString /&gt;
+      </Value>
+    </Setting>
 		<Setting Name="CompletedSetup" Type="Nexus.Client.Settings.PerGameModeSettings`1[System.Boolean]" Scope="User">
 			<Value Profile="(Default)">
 				&lt;PerGameModeSettingsOfBoolean /&gt;
