--- a/NexusClient/app.config
+++ b/NexusClient/app.config
@@ -58,6 +58,12 @@
 				  contract="Nexus.Client.ModRepositories.Nexus.INexusModRepositoryApi"
 				  name="WOTNexusREST" >
 			</endpoint>
+      <endpoint address="http://grimrock.axel.tesnexus.com/"
+				  binding="webHttpBinding"
+				  bindingConfiguration="NexusBinding"
+				  contract="Nexus.Client.ModRepositories.Nexus.INexusModRepositoryApi"
+				  name="LOGNexusREST" >
+      </endpoint>
 		</client>
 	</system.serviceModel>
 	<applicationSettings>
@@ -133,6 +139,11 @@
 					<PerGameModeSettingsOfString />
 				</value>
 			</setting>
+      <setting name="ExecutablePaths" serializeAs="Xml">
+        <value>
+          <PerGameModeSettingsOfString />
+        </value>
+      </setting>
 			<setting name="CompletedSetup" serializeAs="Xml">
 				<value>
 					<PerGameModeSettingsOfBoolean />
