Added support for Dark Souls (new variable needed for custom missing plugin message)

--- a/NexusClient/app.config
+++ b/NexusClient/app.config
@@ -58,6 +58,12 @@
 				  contract="Nexus.Client.ModRepositories.Nexus.INexusModRepositoryApi"
 				  name="WOTNexusREST" >
 			</endpoint>
+      <endpoint address="http://darksouls.axel.tesnexus.com/"
+				  binding="webHttpBinding"
+				  bindingConfiguration="NexusBinding"
+				  contract="Nexus.Client.ModRepositories.Nexus.INexusModRepositoryApi"
+				  name="DSNexusREST" >
+      </endpoint>
 		</client>
 	</system.serviceModel>
 	<applicationSettings>
