Fixes missing files and merges.

--- a/NexusClient/app.config
+++ b/NexusClient/app.config
@@ -64,6 +64,18 @@
 				  contract="Nexus.Client.ModRepositories.Nexus.INexusModRepositoryApi"
 				  name="WOTNexusREST" >
 			</endpoint>
+      <endpoint address="http://grimrock.nexusmods.com/"
+				  binding="webHttpBinding"
+				  bindingConfiguration="NexusBinding"
+				  contract="Nexus.Client.ModRepositories.Nexus.INexusModRepositoryApi"
+				  name="LoGNexusREST" >
+      </endpoint>
+      <endpoint address="http://darksouls.nexusmods.com/"
+				  binding="webHttpBinding"
+				  bindingConfiguration="NexusBinding"
+				  contract="Nexus.Client.ModRepositories.Nexus.INexusModRepositoryApi"
+				  name="DSNexusREST" >
+      </endpoint>
 		</client>
 	</system.serviceModel>
 	<applicationSettings>
