--- a/NexusClient/NexusClient.csproj
+++ b/NexusClient/NexusClient.csproj
@@ -121,6 +121,9 @@
       <DependentUpon>ApplicationInitializationForm.cs</DependentUpon>
       <SubType>Designer</SubType>
     </EmbeddedResource>
+    <EmbeddedResource Include="DownloadMonitoring\UI\DownloadMonitorControl.resx">
+      <DependentUpon>DownloadMonitorControl.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="GameDetectionForm.resx">
       <DependentUpon>GameDetectionForm.cs</DependentUpon>
       <SubType>Designer</SubType>
@@ -267,6 +270,15 @@
     <Compile Include="ApplicationInitializer.cs" />
     <Compile Include="Bootstrapper.cs" />
     <Compile Include="DownloadManagement\DownloadedFileInfo.cs" />
+    <Compile Include="DownloadMonitoring\DownloadMonitor.cs" />
+    <Compile Include="DownloadMonitoring\UI\DownloadListViewItem.cs" />
+    <Compile Include="DownloadMonitoring\UI\DownloadMonitorControl.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="DownloadMonitoring\UI\DownloadMonitorControl.designer.cs">
+      <DependentUpon>DownloadMonitorControl.cs</DependentUpon>
+    </Compile>
+    <Compile Include="DownloadMonitoring\UI\DownloadMonitorVM.cs" />
     <Compile Include="IMessager.cs" />
     <Compile Include="MessagerClient.cs" />
     <Compile Include="ModManagement\InstallationLog\Upgraders\Upgrade0400Task.cs" />
