Fix appconfig, Download Manager control bug, Client crashing on login.

--- a/NexusClient/app.config
+++ b/NexusClient/app.config
@@ -68,7 +68,7 @@
 				  binding="webHttpBinding"
 				  bindingConfiguration="NexusBinding"
 				  contract="Nexus.Client.ModRepositories.Nexus.INexusModRepositoryApi"
-				  name="LoGNexusREST" >
+				  name="LOGNexusREST" >
       </endpoint>
       <endpoint address="http://darksouls.nexusmods.com/"
 				  binding="webHttpBinding"
