Fix wrong address for World of Tanks.

--- a/NexusClient/app.config
+++ b/NexusClient/app.config
@@ -58,7 +58,7 @@
 					  contract="Nexus.Client.ModRepositories.Nexus.INexusModRepositoryApi"
 					  name="SKYRIMNexusREST" >
 			</endpoint>
-			<endpoint address="http://wot.nexusmods.com/"
+			<endpoint address="http://worldoftanks.nexusmods.com/"
 				  binding="webHttpBinding"
 				  bindingConfiguration="NexusBinding"
 				  contract="Nexus.Client.ModRepositories.Nexus.INexusModRepositoryApi"
