--- a/NexusClient/NexusClient.csproj
+++ b/NexusClient/NexusClient.csproj
@@ -123,6 +123,7 @@
     </EmbeddedResource>
     <EmbeddedResource Include="DownloadMonitoring\UI\DownloadMonitorControl.resx">
       <DependentUpon>DownloadMonitorControl.cs</DependentUpon>
+      <SubType>Designer</SubType>
     </EmbeddedResource>
     <EmbeddedResource Include="GameDetectionForm.resx">
       <DependentUpon>GameDetectionForm.cs</DependentUpon>
