--- a/DarkSouls.ModScript/DarkSouls.ModScript.csproj
+++ b/DarkSouls.ModScript/DarkSouls.ModScript.csproj
@@ -31,10 +31,6 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="DarkSouls, Version=1.1.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\DarkSouls\bin\Release\DarkSouls.dll</HintPath>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core">
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
@@ -53,6 +49,10 @@
     <ProjectReference Include="..\Commanding\Commanding.csproj">
       <Project>{1732BB96-1F74-4B99-82D6-4D1239C9D36A}</Project>
       <Name>Commanding</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\DarkSouls\DarkSouls.csproj">
+      <Project>{BC0CE12E-0DB2-4BFF-8752-CEAF6EF9B30F}</Project>
+      <Name>DarkSouls</Name>
     </ProjectReference>
     <ProjectReference Include="..\ModManager.Interface\ModManager.Interface.csproj">
       <Project>{33F65739-7CFB-4EC1-89EF-8B0B5440AB82}</Project>
